# komari-monitor-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  install.sh
.github/workflows/: build.yaml
src/: command_parser.rs  data_struct.rs  exec.rs  get_info.rs  main.rs  netlink.rs  ping.rs  pty.rs  rustls_config.rs  utils.rs
src/callbacks/: exec.rs  mod.rs  ping.rs  pty.rs
src/get_info/: cpu.rs  ip.rs  load.rs  mem.rs  mod.rs  os.rs
src/get_info/network/: mod.rs
