[package]
name = "komari-monitor-rs"
version = "0.0.1"
edition = "2024"
authors = ["GenshinMinecrat <gm@highp.ing>"]
description = "Komari Monitor Agent in Rust"
repository = "https://github.com/GenshinMinecraft/ak_monitor_client_rs"
license = "WTFPL"

[dependencies]
tokio = { version = "1.42.0", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.27.0", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
sysinfo = { version = "0.35.2", default-features = false, features = ["disk", "multithread", "system"] }
systemstat = "0.2.4"
whoami = { version = "2.0.0-pre.2", default-features = false }
reqwest = { version = "0.12.21", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.219", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
clap = { version = "4.5.40", default-features = false, features = ["std", "derive", "usage", "help"] }
log = { version = "0.4.27", default-features = false, features = ["std"] }
simple_logger = { version = "5.0.0", default-features = false, features = ["time", "colored", "colors", "threads"] }
rustls = "0.23.28"
rustls-pki-types = "1.12.0"
futures = { version = "0.3.31", default-features = false, features = ["std"]}

[target.'cfg(target_os = "linux")'.dependencies]
heim-virt = "0.1.0-alpha.1"


[profile]
dev = { opt-level = 3 }
release = { opt-level = 3, lto = true, codegen-units = 1, panic = "abort" }
minimal = { inherits = "release", opt-level = "z", lto = true, codegen-units = 1, panic = "abort", debug = false }