[package]
name = "komari-monitor-rs"
version = "0.2.5"
edition = "2024"
authors = ["GenshinMinecrat <gm@highp.ing>"]
description = "Komari Monitor Agent in Rust"
repository = "https://github.com/GenshinMinecraft/ak_monitor_client_rs"
license = "WTFPL"

[dependencies]
log = { version = "0.4.28", default-features = false, features = ["std"] }
simple_logger = { version = "5.0.0", features = ["stderr", "time", "colored"] }
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "macros", "time", "process", "sync", "net", "fs"] }
rustls = { version = "0.23.32", default-features = false, features = ["ring"] }
rustls-pki-types = "1.12.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
miniserde = { version = "0.1.42", default-features = false, features = ["std"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
clap = { version = "4.5.48", default-features = false, features = ["std", "derive", "usage", "help"] }
sysinfo = { version = "0.37.0", default-features = false, features = ["disk", "system", "multithread", "network"] }
time = { version = "0.3.44", default-features = false, features = ["local-offset", "formatting"] }
icmp-socket = "0.2.0"
portable-pty = "0.9.0"
url = { version = "2.5.7", default-features = false, features = ["std"] }

ureq = { version = "3.1.2", default-features = false, features = ["gzip", "rustls"], optional = true}
nyquest = { version = "0.3.0", default-features = false, features = ["async"], optional = true }
nyquest-preset = { version = "0.3.0", default-features = false, features = ["async"], optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }

[features]
ureq-support = ["ureq"]
nyquest-support = ["nyquest", "nyquest-preset", "openssl-sys"]

[target.'cfg(target_os = "windows")'.dependencies]
raw-cpuid = "11.5.0"
netstat2 = "0.11.2"

[target.'cfg(target_os = "linux")'.dependencies]
heim-virt = "0.1.0-alpha.1"
libc = "0.2.175"

[profile]
dev = { opt-level = 3 }
release = { opt-level = 3, lto = true, codegen-units = 1, panic = "abort" }
minimal = { inherits = "release", opt-level = "z", lto = true, codegen-units = 1, panic = "abort", debug = false, strip = true, debug-assertions = false, overflow-checks = false }
